<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hero_bg_gradient"
    tools:context="com.example.whenlin.herome.Fragments.BackstoryFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView5"
        android:layout_width="102dp"
        android:layout_height="28dp"
        android:layout_marginLeft="150sp"
        android:layout_marginTop="50sp"
        android:text="@string/backstoryTitle"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="96dp"
        android:layout_height="73dp"
        android:layout_marginTop="50sp"
        android:contentDescription=""
        android:src="@mipmap/ic_launcher"
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="125sp"
        android:gravity="bottom"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="247dp"
            android:text="TextView" />

        <Button
            android:id="@+id/button"
            android:layout_width="350sp"
            android:layout_height="40sp"
            android:layout_above="@+id/textView7"
            android:layout_centerHorizontal="true"
            android:background="@drawable/hero_button"
            android:text="Button"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="350sp"
            android:layout_height="40sp"
            android:layout_alignLeft="@+id/textView7"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/textView7"
            android:layout_marginBottom="75dp"
            android:background="@drawable/hero_button"
            android:text="Button"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="20sp"
            android:layout_above="@+id/button"
            android:layout_alignLeft="@+id/button"
            android:layout_alignStart="@+id/button"
            android:ems="10"
            android:text="@string/primaryPowerTitle"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="20sp"
            android:layout_above="@+id/button2"
            android:layout_alignLeft="@+id/button"
            android:layout_alignStart="@+id/button"
            android:text="@string/secondaryPowerTitle"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button10"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="130sp"
            android:backgroundTint="#FAC740"
            android:text="@string/startOverBtn"
            android:textColor="#10161D" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:text="@string/placeholderText"
        android:textAlignment="center"
        android:textColor="#FAC740"
        android:textSize="30sp"
        android:textStyle="bold" />

</FrameLayout>
